# soliloquio

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Procfile  README.md  REFRESH_TOKEN_IMPLEMENTATION.md  compose.prod.yml  compose.yml  public.schema.graphql  renovate.json  schema.graphql  schema.sql
client/: Dockerfile  README.md  deno.json  fresh.gen.ts  specification.md  tailwind.config.ts
client/components/: Button.tsx  Card.tsx  EditorPane.tsx  EmailVerificationBanner.tsx  Input.tsx  MetadataPane.tsx  NavRail.tsx  PasswordInput.tsx  PostTabs.tsx
client/domains/: common.ts  posts.ts  users.ts
client/islands/: ApiKeysSection.tsx  AssetsLibrary.tsx  ChangePasswordForm.tsx  ForgotPasswordForm.tsx  NavRailIsland.tsx  QueryProvider.tsx  ResetPasswordForm.tsx  SignInForm.tsx  SignUpForm.tsx  UserSettingsForm.tsx  UserSettingsFormContent.tsx  VerifyEmailHandler.tsx  Workspace.tsx
client/routes/: _404.tsx  _app.tsx  _layout.tsx  index.tsx  posts.tsx  settings.tsx
client/routes/api/: graphql.ts  upload.ts
client/routes/api/auth/: logout.ts  me.ts  refresh.ts
client/routes/assets/: [...path].ts  index.tsx
client/routes/auth/: change_password.tsx  forgot_password.tsx  reset_password.tsx  signin.tsx  signup.tsx  verify_email.tsx
client/services/assets/: api.ts  hooks.ts  keys.ts  types.ts
client/services/auth/: api.ts  hooks.ts  keys.ts  types.ts
client/services/posts/: api.ts  hooks.ts  keys.ts  types.ts
client/static/: manifest.json
client/utils/: graphql_client.ts  logger.ts  path_guard.test.ts  path_guard.ts  query_client.ts  use_auto_save.ts  workspace_signals.ts
examples/public-blog/: .env.example  README.md  deno.json  fresh.gen.ts  tailwind.config.ts
examples/public-blog/components/: Footer.tsx  Pagination.tsx  PostCard.tsx  PostNav.tsx  SiteTitle.tsx
examples/public-blog/routes/: _404.tsx  _app.tsx  index.tsx
examples/public-blog/routes/posts/: [slug].tsx
examples/public-blog/services/posts/: api.ts  types.ts
examples/public-blog/utils/: graphql_client.ts
src/: main.rs  request_id.rs  schema.rs  setup.rs  upload.rs
tools/schema/: Cargo.toml
tools/schema/src/: main.rs
