workspace = { members = ["packages/graphql"] }
[package]
name = "soliloquio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
uuid = "1.9.1"
async-graphql = { version = "7.0.6", features = [ "uuid", "chrono", "chrono-tz" ] }
async-graphql-rocket = "7.0.6"
serde_json = "1.0.18"
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
rocket = { version = "^0.5.0", features = ["json"] }
models = { path = "./packages/models" }
graphql = { path = "./packages/graphql" }
