workspace = { members = ["packages/graphql", "tools/schema"] }
[package]
name = "soliloquio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
uuid = "1.9.1"
async-graphql = { version = "7.0.11", features = [ "uuid", "chrono", "chrono-tz" ] }
async-graphql-actix-web = "7.0.11"
serde_json = "1.0.18"
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
actix-web = "4"
actix-cors = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
models = { path = "./packages/models" }
graphql = { path = "./packages/graphql" }
services = { path = "./packages/services" }
