[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
async-graphql = { version = "7.0.11", features = [ "uuid", "chrono", "chrono-tz" ] }
graphql = { path = "../../packages/graphql" }

[features]
default = []