[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-graphql = { version = "7.2.1", features = [ "uuid", "chrono", "chrono-tz" ] }
graphql = { path = "../../packages/graphql" }

[features]
default = []